--- a/ray_tracer.opam
+++ b/ray_tracer.opam
@@ -10,10 +10,10 @@ homepage: "https://github.com/ocaml-multicore/fun-ocaml-workshop"
 bug-reports: "https://github.com/ocaml-multicore/fun-ocaml-workshop/issues"
 depends: [
   "dune" {>= "3.15"}
-  "ocaml" {>= "4.14"}
+  "ocaml" {>= "5.2"}
   "graphics" {>= "5.1.2"}
   "ppx_deriving_yojson" {>= "3.7.0"}
-  "saturn_lockfree" {>= "0.5.0"}
+  "saturn" {>= "0.5.0"}
   "odoc" {with-doc}
 ]
 build: [
