--- a/test/dune
+++ b/test/dune
@@ -1,14 +1,11 @@
 (executable
- (name test_eio)
+ (public_name test_eio)
+ (package funocaml_actor_eio)
  (modules test_eio)
  (libraries eio_main actor_eio imagelib ray_tracer))
 
 (executable
- (name test_eio_queue)
+ (public_name test_eio_queue)
+ (package funocaml_actor_eio)
  (modules test_eio_queue)
  (libraries eio_main actor_eio imagelib ray_tracer saturn))
-
-(executable
- (name test_picos_io_cohttp)
- (modules test_picos_io_cohttp)
- (libraries actor_picos_io_cohttp imagelib picos_mux.fifo ray_tracer))
