--- a/funocaml_actor_eio.opam
+++ b/funocaml_actor_eio.opam
@@ -10,8 +10,8 @@ depends: [
   "dune" {>= "3.15"}
   "funocaml_actor_shared" {= version}
   "cohttp-eio" {>= "6.0.0~beta2"}
-  "saturn" {>= "0.5.0" & with-test}
-  "eio_main" {>= "1.0.0" & with-test}
+  "saturn" {>= "0.5.0"}
+  "eio_main" {>= "1.0.0"}
   "odoc" {with-doc}
 ]
 build: [
