Solutions, new README and reorg
Also, makes the workshop a bit more general (by changing names)

--- a/internal/bin/server/dune
+++ b/internal/bin/server/dune
@@ -1,6 +1,6 @@
 (executable
- (public_name funocaml_server)
- (package funocaml_server)
+ (public_name multicore_workshop.server)
+ (package multicore_workshop)
  (name server)
  (libraries protocol dream tyxml color saturn)
  (preprocess
