--- a/internal/lib/actor_shared/dune
+++ b/internal/lib/actor_shared/dune
@@ -1,4 +1,4 @@
 (library
- (public_name funocaml_actor_shared)
+ (public_name multicore_workshop.actor_shared)
  (name actor_shared)
  (libraries http uri protocol imagelib base64))
