--- a/multicore_workshop.opam
+++ b/multicore_workshop.opam
@@ -11,7 +11,7 @@ depends: [
   "dream" {>= "1.0.0~alpha6"}
   "js_of_ocaml" {>= "5.8.2"}
   "brr" {>= "0.0.6"}
-  "color" {>= "0.2.0"}
+  "color" {= "0.2.0"}
   "ppx_blob" {>= "0.8.0"}
   "tyxml" {>= "4.6.0"}
   "cohttp-eio" {>= "6.0.0~beta2"}
